--- a/Lektion-4/exmpel-2.html
+++ b/Lektion-4/exmpel-2.html
@@ -54,6 +54,14 @@
     
     console.log("It´s here");
 
+
+
+    var x1 = "var";
+    let x2 = "let";
+    console.log(x1);
+    console.log(x2);
+
+
     </script>
     
 </body>
