--- a/Lektion-10/ovning-3.html
+++ b/Lektion-10/ovning-3.html
@@ -14,19 +14,19 @@
           case points < 25:
              grade = 'F';
              break;
-          case 25 <= points && points < 30: 
+          case (25 <= points) && (points < 30): 
             grade = 'E';
             break;
-          case 30 <= points && points < 35: 
+          case (30 <= points) && (points < 35): 
              grade = 'D';
              break;
-          case 35 <= points && points < 40: 
+          case (35 <= points) && (points < 40): 
              grade = 'C';
              break;
-          case 40 <= points && points < 45: 
+          case (40 <= points) && (points < 45): 
               grade = 'B'; 
               break;
-          case 45 <= points && points <= 50: 
+          case (45 <= points) && (points <= 50): 
               grade = 'A'; 
               break;
           default:
@@ -35,7 +35,7 @@
        }
        return grade;
     }
-       alert('Din grade är'+ a(points));
+       alert('Din grade är: '+ a(points));
         
     </script>
     
