--- a/Lektion-11/exempel-9.html
+++ b/Lektion-11/exempel-9.html
@@ -7,7 +7,7 @@
 <body>
     <script>
         let biggest = 0;
-        let lowest = Number.MAX_VALUE;
+        let lowest = Number.MAX_VALUE; // För att jämföra minimum nummer. Annars lagrar inte lowest nummer Math.min(antal,Number.Max_VALUE)
         let antal;
         let arr = [];
         
