--- a/Lektion-12/exemepel-4.html
+++ b/Lektion-12/exemepel-4.html
@@ -28,9 +28,9 @@
       console.log(p); // returnerar en HTMLCOllection
 
       for(let i = 0; i < p.length; i++){
-          console.log(p[i].innerHTML);
-          p[i].style.color = 'red'; // Sämsta sättet (Innline style är inte bra)
-          p[i].className = 'cool'; // Ingen punkt behövs
+          console.log(p[i]);
+          p[0].style.color = 'red'; // Sämsta sättet (Innline style är inte bra)
+          p[2].className = 'cool'; // Ingen punkt behövs
       }
     
     </script>
