--- a/Lektion-12/exempel-5.html
+++ b/Lektion-12/exempel-5.html
@@ -23,6 +23,7 @@
         //getElementByTagname returnerar en HTMLCollection
         for(let i = 0; i < allH1.length; i ++){
             console.log(allH1[i].innerHTML.toUpperCase());
+            // allH1[i].innerHTML = allH1[i].innerHTML.toUpperCase()
         }
         
         </script>
