--- a/Lektion-12/ovning2.html
+++ b/Lektion-12/ovning2.html
@@ -26,12 +26,12 @@
             }
 
 
-        //  let h = document.getElementsByTagName('h1');
-        //  for(let i = 0; i<h.length; i++){
-        //      h = h[i].innerHTML;
-        //      h[0].className = 'nice';
+         let h = document.getElementsByTagName('h1');
+         for(let i = 0; i<h.length; i++){
+             let st = h[i].innerHTML;
+            st[0].className = 'nice';
              
-        //  }
+         }
 
 
 
