--- a/Lektion-13/exempel-4.html
+++ b/Lektion-13/exempel-4.html
@@ -10,16 +10,16 @@
 
     <hr>
     <button onmouseover="hide('demo')">Dölj</button>
-    <button onmousecover="show('demo')">Visa</button>
+    <button onmouseover="show('demo')">Visa</button>
     <p id='demo1'>Lite text och annat smått och gott</p>
 
     <hr>
 
     <p id='demo'>Dölj texten genom att klicka på knappen dölj!</p>
 
-    <button onclick= "hide('demo')">Dölj</button>
+    <button onclick= "hide('demo1')">Dölj</button>
     
-    <button onclick="show('demo')">Visa</button>
+    <button onclick="show('demo1')">Visa</button>
 
     <hr>
 
