--- a/Lektion-13/exempel-8.html
+++ b/Lektion-13/exempel-8.html
@@ -39,7 +39,7 @@
         function checkUsername(){
             console.log(elUser.value); //OBS! innerHTML funkar inte med input
 
-            if(elUser.value.length >= 5){
+            if(elUser.value.length <= 5){
                 elMsg.innerHTML = 'minst 5';
             }
             // if(elUser.value.length <= 5){
