--- a/Lektion-13/exempel-9.html
+++ b/Lektion-13/exempel-9.html
@@ -20,7 +20,7 @@
 
         //Koppla event 
         btnPrice.onclick = getPrice; //Inga paranteser
-        btnPrice.onclick = getMessage; //Vi får inte lägga till funktionen
+        //btnPrice.onclick = getMessage; //Vi får inte lägga till funktionen
 
 
         function getPrice(){
